# opsgentic

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  bootstrap.env.example  bootstrap.sh  pyproject.toml
.claude/: README.md  rules.md
.claude/changelogs/: 2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-26.md  2026-06-29.md  2026-06-30.md
config/: gitops.yaml
console/: Dockerfile  package-lock.json  package.json  server.js
console/public/: index.html
deploy/manifests/: configmap.yaml  deployment.yaml  job-template.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml  worker-deployment.yaml
deploy/manifests/agent-skills/: code.md  gitops.md  pr-responder.md  sre.md  validation.md
deploy/manifests/console/: deployment.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
deploy/manifests/mcp/: deployment.yaml  github-deployment.yaml  github-service.yaml  prometheus-deployment.yaml  prometheus-service.yaml  service.yaml  serviceaccount.yaml
deploy/manifests/postgres/: secret.example.yaml  service.yaml  statefulset.yaml
deploy/manifests/rbac/: clusterrole-readonly.yaml  clusterrolebinding.yaml  serviceaccount.yaml
docs/: ARCHITECTURE.md  PR-COMMENT-AGENT.md  USAGE.md  blog-introducing-opsgentic.md
examples/: chat_input.json  chat_input_mcp.json  grafana_alert.json
hack/: demo-down.sh  demo-up.sh
mcp-config/: servers.yaml
src/opsgentic/: agent_registry.py  agent_skills.py  cli.py  config.py  graphview.py  main.py  runner.py  runs.py  tasks.py  worker.py
tests/: test_agent_registry.py  test_graphview.py
(+30 files in other folders)
