[project]
name = "opsgentic"
version = "0.1.0"
description = "Multi-agent RCA / Validation / Remediation on Kubernetes (LangGraph + GitOps)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[project.scripts]
opsgentic-api = "opsgentic.main:main"
opsgentic = "opsgentic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsgentic"]
